# sarafan_test

./: .env.sample  main.py  pyproject.toml  shop_data.json
config/: settings.py  urls.py
shop/: admin.py  forms.py  models.py  paginators.py  serializers.py  urls.py  validators.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_cartproduct_user.py
users/: models.py  permissions.py  urls.py
users/management/commands/: superuser.py
users/migrations/: 0001_initial.py
